--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,13 @@ body {
 }
 
 .menu-vertical {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 200px;
-    height: 100vh;
     background-color: #111;
     padding-top: 13px;
-    position: fixed;
 }
 
 .menu-vertical a {
@@ -573,4 +575,41 @@ body {
 
 .random.active svg {
     color: #1DB954;
+}
+
+#menu-toggle {
+    display: inline;
+    font-size: 1.5rem;
+    background: none;
+    border: none;
+    color: white;
+}
+
+/* MOBILE */
+@media (max-width: 768px) {
+
+    /* Inicialmente esconde o menu fora da tela */
+    #menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 200px;
+        background-color: #111;
+        z-index: 1000;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease;
+    }
+
+    .carrosel {
+        padding-left: 20px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* 2 colunas fixas */
+    }
+
+    /* Quando aberto, o menu aparece deslizando */
+    #menu.show {
+        transform: translateX(0);
+    }
 }
