--- a/css/styles.css
+++ b/css/styles.css
@@ -608,6 +608,37 @@ body {
         /* 2 colunas fixas */
     }
 
+    .mix-foru {
+        width: 165px;
+        height: 45px;
+        padding: 0px 0px 0px 0px;
+        background-color: #555454;
+        display: flex;
+        border-radius: 5px;
+        flex-direction: row;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .album {
+        width: 40px;
+        height: 40px;
+        background-color: var(--cor-fundo);
+        flex-shrink: 0;
+    }
+
+    .menu-bar {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        background-color: #343434;
+        padding: 10px 12px;
+    }
+
+    .main-content {
+        padding: 15px 0px 0px 12px;
+    }
+
     /* Quando aberto, o menu aparece deslizando */
     #menu.show {
         transform: translateX(0);
