--- a/css/styles.css
+++ b/css/styles.css
@@ -588,6 +588,15 @@ body {
 /* MOBILE */
 @media (max-width: 768px) {
 
+    html,
+    body {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        width: 100%;
+        padding-bottom: 80px
+    }
+
     #menu {
         position: fixed;
         top: 0;
@@ -649,4 +658,78 @@ body {
         position: fixed;
         width: 100%;
     }
+
+    .carrossel-vertical {
+        display: flex;
+        flex-direction: row;
+        gap: 25px;
+        overflow-x: auto;
+        padding: 10px;
+        width: 100%;
+        flex-wrap: nowrap;
+        scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch;
+        scrollbar-width: none;
+    }
+
+    .carrossel-vertical::-webkit-scrollbar {
+        display: none;
+    }
+
+    .mix-foru-vertical {
+        width: calc((100% - (3 * 25px)) / 4);
+        min-width: 150px;
+        height: 220px;
+        padding: 12px;
+        background-color: #555454;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 5px;
+        transition: background-color 0.2s;
+        flex-shrink: 0;
+        scroll-snap-align: start;
+    }
+
+    .album-vertical {
+        width: 100%;
+        height: 65%;
+        background-color: #111;
+    }
+
+    .mix-foru-vertical p {
+        margin: 0;
+        color: white;
+        text-align: center;
+        font-size: 14px;
+        line-height: 2.3;
+    }
+
+    .mix-foru-vertical:hover {
+        background-color: #6a6a6a;
+    }
+
+    .player-song {
+        flex-wrap: wrap;
+        justify-content: left;
+        padding: 0px;
+    }
+
+    .volume-wrapper {
+        display: none;
+    }
+
+    .album-info {
+        font-size: 12px;
+    }
+
+    .photo-album {
+        width: 40px;
+        height: 40px;
+    }
+
+    #likeSongsBtn.liked {
+        filter: invert(52%) sepia(92%) saturate(453%) hue-rotate(90deg) brightness(92%) contrast(92%);
+    }
+
 }
